linux从入门到精通2

--- a/source/_posts/实用代码集合.md
+++ b/source/_posts/实用代码集合.md
@@ -19,7 +19,5 @@ categories:
 
 
 
-<audio src="我的梦.mp3" autoplay="true" loop="-1"></audio>  
-
-
-
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="http://dl.stream.qqmusic.qq.com/M800003FIqDQ0xyaGF.mp3?vkey=45FB4F94A6FBBC5B240A8841C72E82F0F02DCF6FBB4AD7B184BB54B837A19FE57AF14E0087DF78166382D2268F0571A367E826DEC2C5B8F4&guid=5150825362&fromtag=1"></iframe>
+//其中的width=298 height=52 均改为0就看不到了，依然可以播放音乐
