--- a/source/_posts/再温C++—3 继承及多态.md
+++ b/source/_posts/再温C++—3 继承及多态.md
@@ -168,7 +168,9 @@ C/C++是静态编译型语言
 
 **多态:同样的调用语句有多种不同的表现形态**   
 C++中通过virtual关键字对多态进行支持     
-使用virtual声明的函数被重写后即可展现多态特性    
+使用virtual声明的函数被重写后即可展现多态特性       
+
+在父类中写了virttual关键字后，在子类中的重写函数写不写virtual均可，但为了提示使用了多态一般建议写上virtal关键字。
 
 ***
 间接赋值成立的3个条件：     
